Further Layout Updates

--- a/euro2012.html
+++ b/euro2012.html
@@ -45,6 +45,8 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 
 
       <div class="group" id="Group_A">
+         <h2>Group A</h2>
+
 
         <table>
           <thead>
@@ -163,6 +165,8 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
       </div>
 
       <div class="group" id="Group_B">
+         <h2>Group B</h2>
+
 
         <table>
           <thead>
@@ -281,6 +285,8 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
       </div>
 
       <div class="group" id="Group_C">
+         <h2>Group C</h2>
+
 
         <table>
           <thead>
@@ -399,6 +405,8 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
       </div>
 
       <div class="group" id="Group_D">
+         <h2>Group D</h2>
+
 
         <table>
           <thead>
@@ -517,6 +525,7 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
       </div>
 
 <div class="tree">
+<h2>Knockout Phase</h2>
 <div class="qf">
   <div>
     <span rel="Group_A" class="first"></span><br />
@@ -538,25 +547,22 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 
 <div class="sf">
   <div>
-    <span></span><br />
-    <span></span>
+    <span>&nbsp;</span><br />
+    <span>&nbsp;</span>
   </div>
   <div>
-    <span></span><br />
-    <span></span>
+    <span>&nbsp;</span><br />
+    <span>&nbsp;</span>
   </div>
 </div>
 
 <div class="final">
   <div>
-    <span></span><br />
-    <span></span>
+    <span>&nbsp;</span><br />
+    <span>&nbsp;</span>
   </div>
 </div>
 
-<div class="champ">
-  <span></span>
-</div>
 </div>
 
 </div>
