--- a/euro2012.html
+++ b/euro2012.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>UEFA Euro Cup 2012 Results Calculator</title>
+<meta name="google-site-verification" content="RmO7AhigTPyQPH0l3WALbY8uNPAx6zso5jl3qUtrWpw" />
 <script type="text/javascript" src="jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="euro2012.js"></script>
 <link rel="stylesheet" href="euro2012.css" type="text/css" />
@@ -27,17 +28,25 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 </div>
 
          <div>
-<!--
             <div id="tweet">
              <a href="https://twitter.com/share" class="twitter-share-button" data-via="theycallmemorty">Tweet</a>
              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>  
             </div>
             <div id="facebook" class="fb-like" data-send="false" data-layout="button_count" data-width="75" data-show-faces="true"></div>
--->
          </div>
 
      <div class="bottom"><div id="adholder">
-        My Ad
+        <script type="text/javascript"><!--
+        google_ad_client = "ca-pub-8524083442417803";
+        /* Cup Calculator Bottom Ad */
+        google_ad_slot = "8343265370";
+        google_ad_width = 200;
+        google_ad_height = 200;
+        //-->
+        </script>
+        <script type="text/javascript"
+        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+        </script>
      </div></div>
 
 </div>
@@ -566,5 +575,15 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 </div>
 
 </div>
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-16735325-1']);
+  _gaq.push(['_trackPageview']);
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 </body>
 </html>
