Layout Changes; Clear tree when score changed

--- a/euro2012.html
+++ b/euro2012.html
@@ -21,7 +21,7 @@
 <div class="left">
 
 <h1>2012 UEFA Euro Cup Results Calculator</h1>
-<div>
+<div id="summary">
 Enter some scores and the standings will update automatically.  Easily determine what it will take for your team to advance.<br />
 <br />
 Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
