--- a/index.html
+++ b/index.html
@@ -133,43 +133,43 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 
         <div class="match">
           <span rel="Poland"><img src="images/Poland.png" alt="Poland" />
-          Poland <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Greece"><img src="images/Greece.png" alt="Greece" /> Greece <input size="2" maxlength="2" type="text" /></span>
+          Poland <input size="2" maxlength="2" type="text" value="1 " /></span> vs. <span rel=
+          "Greece"><img src="images/Greece.png" alt="Greece" /> Greece <input size="2" maxlength="2" type="text" value=" 1" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Russia"><img src="images/Russia.png" alt="Russia" />
-          Russia <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Czech_Republic"><img src="images/Czech_Republic.png" alt="Czech Republic" /> Czech Republic <input size="2" maxlength="2" type="text" /></span>
+          Russia <input size="2" maxlength="2" type="text" value="4 " /></span> vs. <span rel=
+          "Czech_Republic"><img src="images/Czech_Republic.png" alt="Czech Republic" /> Czech Republic <input size="2" maxlength="2" type="text" value=" 1" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Greece"><img src="images/Greece.png" alt="Greece" />
-          Greece <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Czech_Republic"><img src="images/Czech_Republic.png" alt="Czech Republic" /> Czech Republic <input size="2" maxlength="2" type="text" /></span>
+          Greece <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Czech_Republic"><img src="images/Czech_Republic.png" alt="Czech Republic" /> Czech Republic <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Poland"><img src="images/Poland.png" alt="Poland" />
-          Poland <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Russia"><img src="images/Russia.png" alt="Russia" /> Russia <input size="2" maxlength="2" type="text" /></span>
+          Poland <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Russia"><img src="images/Russia.png" alt="Russia" /> Russia <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Czech_Republic"><img src="images/Czech_Republic.png" alt="Czech Republic" />
-          Czech Republic <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Poland"><img src="images/Poland.png" alt="Poland" /> Poland <input size="2" maxlength="2" type="text" /></span>
+          Czech Republic <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Poland"><img src="images/Poland.png" alt="Poland" /> Poland <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Greece"><img src="images/Greece.png" alt="Greece" />
-          Greece <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Russia"><img src="images/Russia.png" alt="Russia" /> Russia <input size="2" maxlength="2" type="text" /></span>
+          Greece <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Russia"><img src="images/Russia.png" alt="Russia" /> Russia <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
@@ -253,43 +253,43 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 
         <div class="match">
           <span rel="Netherlands"><img src="images/Netherlands.png" alt="Netherlands" />
-          Netherlands <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Denmark"><img src="images/Denmark.png" alt="Denmark" /> Denmark <input size="2" maxlength="2" type="text" /></span>
+          Netherlands <input size="2" maxlength="2" type="text" value="0 " /></span> vs. <span rel=
+          "Denmark"><img src="images/Denmark.png" alt="Denmark" /> Denmark <input size="2" maxlength="2" type="text" value=" 1" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Germany"><img src="images/Germany.png" alt="Germany" />
-          Germany <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Portugal"><img src="images/Portugal.png" alt="Portugal" /> Portugal <input size="2" maxlength="2" type="text" /></span>
+          Germany <input size="2" maxlength="2" type="text" value="1 " /></span> vs. <span rel=
+          "Portugal"><img src="images/Portugal.png" alt="Portugal" /> Portugal <input size="2" maxlength="2" type="text" value=" 0" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Denmark"><img src="images/Denmark.png" alt="Denmark" />
-          Denmark <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Portugal"><img src="images/Portugal.png" alt="Portugal" /> Portugal <input size="2" maxlength="2" type="text" /></span>
+          Denmark <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Portugal"><img src="images/Portugal.png" alt="Portugal" /> Portugal <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Netherlands"><img src="images/Netherlands.png" alt="Netherlands" />
-          Netherlands <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Germany"><img src="images/Germany.png" alt="Germany" /> Germany <input size="2" maxlength="2" type="text" /></span>
+          Netherlands <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Germany"><img src="images/Germany.png" alt="Germany" /> Germany <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Portugal"><img src="images/Portugal.png" alt="Portugal" />
-          Portugal <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Netherlands"><img src="images/Netherlands.png" alt="Netherlands" /> Netherlands <input size="2" maxlength="2" type="text" /></span>
+          Portugal <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Netherlands"><img src="images/Netherlands.png" alt="Netherlands" /> Netherlands <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Denmark"><img src="images/Denmark.png" alt="Denmark" />
-          Denmark <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Germany"><img src="images/Germany.png" alt="Germany" /> Germany <input size="2" maxlength="2" type="text" /></span>
+          Denmark <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Germany"><img src="images/Germany.png" alt="Germany" /> Germany <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
@@ -373,43 +373,43 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 
         <div class="match">
           <span rel="Spain"><img src="images/Spain.png" alt="Spain" />
-          Spain <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Italy"><img src="images/Italy.png" alt="Italy" /> Italy <input size="2" maxlength="2" type="text" /></span>
+          Spain <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Italy"><img src="images/Italy.png" alt="Italy" /> Italy <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Ireland"><img src="images/Ireland.png" alt="Ireland" />
-          Ireland <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Croatia"><img src="images/Croatia.png" alt="Croatia" /> Croatia <input size="2" maxlength="2" type="text" /></span>
+          Ireland <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Croatia"><img src="images/Croatia.png" alt="Croatia" /> Croatia <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Italy"><img src="images/Italy.png" alt="Italy" />
-          Italy <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Croatia"><img src="images/Croatia.png" alt="Croatia" /> Croatia <input size="2" maxlength="2" type="text" /></span>
+          Italy <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Croatia"><img src="images/Croatia.png" alt="Croatia" /> Croatia <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Spain"><img src="images/Spain.png" alt="Spain" />
-          Spain <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Ireland"><img src="images/Ireland.png" alt="Ireland" /> Ireland <input size="2" maxlength="2" type="text" /></span>
+          Spain <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Ireland"><img src="images/Ireland.png" alt="Ireland" /> Ireland <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Croatia"><img src="images/Croatia.png" alt="Croatia" />
-          Croatia <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Spain"><img src="images/Spain.png" alt="Spain" /> Spain <input size="2" maxlength="2" type="text" /></span>
+          Croatia <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Spain"><img src="images/Spain.png" alt="Spain" /> Spain <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Italy"><img src="images/Italy.png" alt="Italy" />
-          Italy <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Ireland"><img src="images/Ireland.png" alt="Ireland" /> Ireland <input size="2" maxlength="2" type="text" /></span>
+          Italy <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Ireland"><img src="images/Ireland.png" alt="Ireland" /> Ireland <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
@@ -493,43 +493,43 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 
         <div class="match">
           <span rel="France"><img src="images/France.png" alt="France" />
-          France <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "England"><img src="images/England.png" alt="England" /> England <input size="2" maxlength="2" type="text" /></span>
+          France <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "England"><img src="images/England.png" alt="England" /> England <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Ukraine"><img src="images/Ukraine.png" alt="Ukraine" />
-          Ukraine <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Sweden"><img src="images/Sweden.png" alt="Sweden" /> Sweden <input size="2" maxlength="2" type="text" /></span>
+          Ukraine <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Sweden"><img src="images/Sweden.png" alt="Sweden" /> Sweden <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Ukraine"><img src="images/Ukraine.png" alt="Ukraine" />
-          Ukraine <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "France"><img src="images/France.png" alt="France" /> France <input size="2" maxlength="2" type="text" /></span>
+          Ukraine <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "France"><img src="images/France.png" alt="France" /> France <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Sweden"><img src="images/Sweden.png" alt="Sweden" />
-          Sweden <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "England"><img src="images/England.png" alt="England" /> England <input size="2" maxlength="2" type="text" /></span>
+          Sweden <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "England"><img src="images/England.png" alt="England" /> England <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="England"><img src="images/England.png" alt="England" />
-          England <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "Ukraine"><img src="images/Ukraine.png" alt="Ukraine" /> Ukraine <input size="2" maxlength="2" type="text" /></span>
+          England <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "Ukraine"><img src="images/Ukraine.png" alt="Ukraine" /> Ukraine <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Sweden"><img src="images/Sweden.png" alt="Sweden" />
-          Sweden <input size="2" maxlength="2" type="text" /></span> vs. <span rel=
-          "France"><img src="images/France.png" alt="France" /> France <input size="2" maxlength="2" type="text" /></span>
+          Sweden <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
+          "France"><img src="images/France.png" alt="France" /> France <input size="2" maxlength="2" type="text" value="" /></span>
         </div>
 
 
