--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 
         <div class="match">
           <span rel="Czech_Republic"><img src="images/Czech_Republic.png" alt="Czech Republic" />
-          Czech Republic <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
-          "Poland"><img src="images/Poland.png" alt="Poland" /> Poland <input size="2" maxlength="2" type="text" value="" /></span>
+          Czech Republic <input size="2" maxlength="2" type="text" value="1 " /></span> vs. <span rel=
+          "Poland"><img src="images/Poland.png" alt="Poland" /> Poland <input size="2" maxlength="2" type="text" value=" 0" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Greece"><img src="images/Greece.png" alt="Greece" />
-          Greece <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
-          "Russia"><img src="images/Russia.png" alt="Russia" /> Russia <input size="2" maxlength="2" type="text" value="" /></span>
+          Greece <input size="2" maxlength="2" type="text" value="1 " /></span> vs. <span rel=
+          "Russia"><img src="images/Russia.png" alt="Russia" /> Russia <input size="2" maxlength="2" type="text" value=" 0" /></span>
         </div>
 
 
