Update with final HTML

--- a/index.html
+++ b/index.html
@@ -281,15 +281,15 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 
         <div class="match">
           <span rel="Portugal"><img src="images/Portugal.png" alt="Portugal" />
-          Portugal <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
-          "Netherlands"><img src="images/Netherlands.png" alt="Netherlands" /> Netherlands <input size="2" maxlength="2" type="text" value="" /></span>
+          Portugal <input size="2" maxlength="2" type="text" value="2 " /></span> vs. <span rel=
+          "Netherlands"><img src="images/Netherlands.png" alt="Netherlands" /> Netherlands <input size="2" maxlength="2" type="text" value=" 1" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Denmark"><img src="images/Denmark.png" alt="Denmark" />
-          Denmark <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
-          "Germany"><img src="images/Germany.png" alt="Germany" /> Germany <input size="2" maxlength="2" type="text" value="" /></span>
+          Denmark <input size="2" maxlength="2" type="text" value="1 " /></span> vs. <span rel=
+          "Germany"><img src="images/Germany.png" alt="Germany" /> Germany <input size="2" maxlength="2" type="text" value=" 2" /></span>
         </div>
 
 
@@ -401,15 +401,15 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 
         <div class="match">
           <span rel="Croatia"><img src="images/Croatia.png" alt="Croatia" />
-          Croatia <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
-          "Spain"><img src="images/Spain.png" alt="Spain" /> Spain <input size="2" maxlength="2" type="text" value="" /></span>
+          Croatia <input size="2" maxlength="2" type="text" value="0 " /></span> vs. <span rel=
+          "Spain"><img src="images/Spain.png" alt="Spain" /> Spain <input size="2" maxlength="2" type="text" value=" 1" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Italy"><img src="images/Italy.png" alt="Italy" />
-          Italy <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
-          "Ireland"><img src="images/Ireland.png" alt="Ireland" /> Ireland <input size="2" maxlength="2" type="text" value="" /></span>
+          Italy <input size="2" maxlength="2" type="text" value="2 " /></span> vs. <span rel=
+          "Ireland"><img src="images/Ireland.png" alt="Ireland" /> Ireland <input size="2" maxlength="2" type="text" value=" 0" /></span>
         </div>
 
 
@@ -521,15 +521,15 @@ Feedback: <a href="http://www.twitter.com/theycallmemorty">@theycallmemorty</a>
 
         <div class="match">
           <span rel="England"><img src="images/England.png" alt="England" />
-          England <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
-          "Ukraine"><img src="images/Ukraine.png" alt="Ukraine" /> Ukraine <input size="2" maxlength="2" type="text" value="" /></span>
+          England <input size="2" maxlength="2" type="text" value="1 " /></span> vs. <span rel=
+          "Ukraine"><img src="images/Ukraine.png" alt="Ukraine" /> Ukraine <input size="2" maxlength="2" type="text" value=" 0" /></span>
         </div>
 
 
         <div class="match">
           <span rel="Sweden"><img src="images/Sweden.png" alt="Sweden" />
-          Sweden <input size="2" maxlength="2" type="text" value="" /></span> vs. <span rel=
-          "France"><img src="images/France.png" alt="France" /> France <input size="2" maxlength="2" type="text" value="" /></span>
+          Sweden <input size="2" maxlength="2" type="text" value="2 " /></span> vs. <span rel=
+          "France"><img src="images/France.png" alt="France" /> France <input size="2" maxlength="2" type="text" value=" 0" /></span>
         </div>
 
 
