--- a/test/mytest.html
+++ b/test/mytest.html
@@ -10,6 +10,7 @@
   <div id="qunit-fixture"></div>
   <script src="qunit-1.11.0.js"></script>
   <script src="../jquery-1.9.1.min.js"></script>
+  <script src="../underscore-min.js"></script>
   <script src="../wc2014.js"></script>
   <script src="wctesting.js"></script/>
 </body>
