--- a/worldcup2014.html
+++ b/worldcup2014.html
@@ -4,21 +4,58 @@
   <head>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="soccer.css" rel="stylesheet">
+
   	<title>2014 World Cup Results Calculator</title>
+
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+
     <meta name="description" content="Quickly calculate the results of the 2014 World Cup Group Stage and Knock-out Stage." />
     <meta name="keywords" content="World Cup Calculator, World Cup Results Calculator, World Cup Group Stage Calculator, World Cup Tree, 2010 World Cup, World Cup, Cup Calculator" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
   </head>
 
   <body>
 
-    <div class="container maincontainer">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#my-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">2014 World Cup Results Calculator</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="my-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Group Stage <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#groupa">Group A</a></li>
+                <li><a href="#groupb">Group B</a></li>
+                <li><a href="#groupc">Group C</a></li>
+                <li><a href="#groupd">Group D</a></li>
+                <li><a href="#groupe">Group E</a></li>
+                <li><a href="#groupf">Group F</a></li>
+                <li><a href="#groupg">Group G</a></li>
+                <li><a href="#grouph">Group H</a></li>
+              </ul>
+            </li>
+            <li><a href="#knockoutstage">Knockout Stage</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container-fluid maincontainer">
       <div id="soccerroot"></div>
     </div>
 
+    <script src="jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="bootstrap.min.js" type="text/javascript"></script>
     <script src="http://fb.me/react-0.10.0.js" type="text/javascript"></script>
     <script src="http://fb.me/JSXTransformer-0.10.0.js" type="text/javascript"></script>
     <script src="underscore-min.js" type="text/javascript"></script>
