Now compiling with Grunt

--- a/test/mytest.html
+++ b/test/mytest.html
@@ -9,9 +9,9 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="qunit-1.11.0.js"></script>
-  <script src="../jquery-1.9.1.min.js"></script>
-  <script src="../underscore-min.js"></script>
-  <script src="../wc2014.js" data-cover></script>
+  <script src="../lib/jquery-1.9.1.min.js"></script>
+  <script src="../lib/underscore-min.js"></script>
+  <script src="../src/wc2014.js" data-cover></script>
   <script src="wctesting.js"></script/>
   <script src="blanket.min.js"></script>
 </body>
