--- a/worldcup2014.html
+++ b/worldcup2014.html
@@ -56,13 +56,11 @@
 
     <script src="//code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" type=text/javascript></script>
-    <script src="//fb.me/react-0.10.0.js" type="text/javascript"></script>
-    <script src="//fb.me/JSXTransformer-0.10.0.js" type="text/javascript"></script>
+    <script src="//fb.me/react-0.10.0.min.js" type="text/javascript"></script>
+    <!--<script src="//fb.me/JSXTransformer-0.10.0.js" type="text/javascript"></script> -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js" type="text/javascript"></script>
 
-    <script src="matchdata.js" type=text/javascript></script>
-    <script src="soccer.jsx" type="text/jsx"></script>
-    <script src="wc2014.js" type="text/javascript"></script>
+    <script src="dist/cupcalculator.min.js" type="text/javascript"></script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
